# github-lang-analyzer

./: .prettierignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
assets/: github_lang_analyzer_bg-f9af0610.wasm  index-eada97b8.js  index-eb81d389.js
src/: main.tsx
src/app/: App.tsx
src/app/providers/: index.ts  with-chakra.tsx
src/app/styles/theme/: index.ts  theme.ts
src/entities/diagram-buttons/: index.ts
src/entities/diagram-buttons/ui/: index.tsx
src/entities/input-field/: index.ts
src/entities/input-field/ui/: index.tsx
src/entities/language-list/: index.ts
src/entities/language-list/ui/: index.tsx
src/features/diagram/: index.ts
src/features/diagram/ui/: index.tsx
src/shared/model/diagram/: diagram.ts  index.ts
src/shared/model/github/: github.ts  index.ts
src/shared/ui/diagram-canvas/: diagram-canvas.tsx
src/shared/utils/: fetchByUrl.ts
wasm-module/: Cargo.toml
wasm-module/src/: lang_analyzer.rs  lib.rs
