[package]
name = "github-lang-analyzer"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Dannil Parcvaniya <parcvaniya2021@gmail.com>"]
repository = "https://github.com/agnisun/github-lang-analyzer"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = {version = "0.2.84", features = ["serde-serialize"] }
web-sys = { version = "0.3.61", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'MouseEvent',
    'DomRect'
] }
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.61"

[profile.release]
lto = true
opt-level = 'z'